@@ -1,3 +1,19 @@
+/*******************************************************************************
+ * Copyright 2022 Exactpro Systems Limited
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ ******************************************************************************/
+
 package com.gevamu.web.server.config;
 
 import lombok.extern.slf4j.Slf4j;
@@ -11,6 +27,7 @@ import org.springframework.web.reactive.config.ResourceHandlerRegistry;
 import org.springframework.web.reactive.config.WebFluxConfigurer;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 @Configuration
 @Slf4j
@@ -24,10 +41,10 @@ public class WebConfig implements WebFluxConfigurer {
 
     @Override
     public void addResourceHandlers(ResourceHandlerRegistry registry) {
-        var staticPath = StringUtils.isNotBlank(staticResourcesPath) ?
-            Path.of(staticResourcesPath) :
-            Path.of(System.getProperty("user.dir"), STATIC_CONTENT_DIRECTORY_NAME);
-        var staticPathLocation = "file:" + staticPath + "/";
+        Path staticPath = StringUtils.isNotBlank(staticResourcesPath) ?
+            Paths.get(staticResourcesPath) :
+            Paths.get(System.getProperty("user.dir"), STATIC_CONTENT_DIRECTORY_NAME);
+        String staticPathLocation = "file:" + staticPath + "/";
         registry.addResourceHandler("/**")
             .addResourceLocations(staticPathLocation)
             .resourceChain(true);
